--- a/css/styles.css
+++ b/css/styles.css
@@ -56,7 +56,7 @@ footer > a + a {
 
 .monstera {
     width: 60px;
-    margin: 0 auto 15vh;
+    margin: 0 auto;
     transform: rotate(160deg);
     transition: all 1s;
     display: block;
